# ReAgent_Project

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  reagent-readme.md  requirements.txt  setup.py
api/: __init__.py  main.py
api/routes/: __init__.py  health.py  questions.py  tasks.py  websocket.py
api/schemas/: __init__.py  requests.py  responses.py  websocket.py
configs/: nginx.conf  prompts.yaml  redis.conf
db/: init.sql  models.py  session.py
db/migrations/: alembic-env.py  alembic.ini
k8s/: configmap.yaml  namespace.yaml  secrets.yaml
k8s/deployments/: api.yaml  redis.yaml  worker.yaml
k8s/services/: api-service.yaml  redis-service.yaml
monitoring/: prometheus.yml
monitoring/alerting/: rules.yml
monitoring/grafana/dashboards/: agent-performance.json  reagent-overview.json
monitoring/grafana/datasources/: prometheus.yml
reagent/: __init__.py  config.py  main.py  models.py  monitoring.py
scripts/: backup.sh  deploy.sh  setup.sh
tests/: __init__.py  conftest.py
tests/fixtures/: sample_questions.json
tests/integration/: __init__.py  test_system.py
tests/unit/: __init__.py  test_agents.py  test_backtracking.py  test_knowledge.py
worker/: __init__.py  beat.py  celery_app.py  tasks.py
